src/objects/Region_Code__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Region Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REG-{0000}</displayFormat>
        <label>Region Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>